--- a/set.env
+++ b/set.env
@@ -17,3 +17,4 @@ HEROKU=non
 ANTI_COMMAND_SPAM=non
 ANTI_DELETE_MESSAGE=oui
 AUTO_REACT_MESSAGE=non
+DATABASE_URL=postgresql://newton_hv52_user:bL6nSnT8Kf9qfCDyCQoIGFd1uEDvb5dx@dpg-cuv5l8q3esus73blngb0-a.oregon-postgres.render.com/newton_hv52
